--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,10 @@ repos:
   hooks:
     - id: pylint
       name: pylint
-      entry: pylint
+      #entry: python3 -m pylint --recursive true .
+      entry: python3 -m pylint --recursive true .
       language: system
       types: [python]
+      #exclude: src/build/
       always_run: true
+      pass_filenames: false
