--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,7 +31,8 @@ jobs:
         id: build
         shell: bash
         run: |
-          ls -lR;
+          pwd
+          ls -lRa;
           make build
       - run: npx semantic-release-plus
         env:
