feat: initial commit 1689684209

--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,6 @@
 {
   "branches": [{"name": "initial-implementations", "prerelease": "init"}],
-  "tagFormat": "{version}",
+  "tagFormat": "${version}",
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
