--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,5 @@
 {
-  "branches": [{"name": "initial-implementations", "prerelease": "init"}],
+  "branches": [",+([0-9])?(.{+([0-9]),x}).x", "master", {"name": "initial-implementations", "prerelease": "dev.${name.replace(/[\/_]/g, '')}"}],
   "tagFormat": "${version}",
   "plugins": [
     "@semantic-release/commit-analyzer",
