--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,5 @@
 {
-  "branches": [",+([0-9])?(.{+([0-9]),x}).x", "main", {"name": "initial-implementations", "prerelease": "dev.${name.replace(/[\/_]/g, '')}"}],
+  "branches": [",+([0-9])?(.{+([0-9]),x}).x", "main", {"name": "initial-implementation", "prerelease": "dev.${name.replace(/[\/_]/g, '')}"}],
   "tagFormat": "${version}",
   "plugins": [
     "@semantic-release/commit-analyzer",
