feat: initial commit 1689955246

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,3 +39,5 @@ jobs:
       - run: npx semantic-release-plus
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_USERNAME: ideamixes
+          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
