--- a/.releaserc
+++ b/.releaserc
@@ -1,8 +1,14 @@
 {
-  "branches": [",+([0-9])?(.{+([0-9]),x}).x", "main", {"name": "initial-implementation", "prerelease": "dev.${name.replace(/[\/_]/g, '')}"}],
+  "branches": ["+([0-9])?(.{+([0-9]),x}).x", "main", {"name": "initial-implementation", "prerelease": "dev.${name.replace(/[\/_]/g, '')}"}],
   "tagFormat": "${version}",
   "plugins": [
     "@semantic-release/commit-analyzer",
+    [
+      "@semantic-release/exec",
+      {
+        "verifyReleaseCmd": "echo \"OBJECT_CLONER_VERSION=${nextRelease.version}\" >> $GITHUB_ENV"
+      }
+    ],
     "@semantic-release/release-notes-generator",
     "@semantic-release/git",
     [
