feat: initial commit 1690129735

--- a/.releaserc
+++ b/.releaserc
@@ -6,7 +6,7 @@
     [
       "@semantic-release/exec",
       {
-        "verifyReleaseCmd": "echo \"OBJECT_CLONER_VERSION=${nextRelease.version}\" >> $GITHUB_ENV"
+        "verifyReleaseCmd": "echo \"OBJECT_CLONER_VERSION=${nextRelease.version}\" | sed 's/-/+/' >> $GITHUB_ENV"
       }
     ],
     "@semantic-release/release-notes-generator",
