--- a/.releaserc
+++ b/.releaserc
@@ -16,6 +16,14 @@
       {
         "name": "ghcr.io/ideamixes/object-cloner"
       }
+    ],
+    [
+      "semantic-release-helm3",
+      {
+        "chartPath": "./deploy/helm-chart-object-cloner",
+        "crPublish": true,
+        "crConfigPath": "./deploy/helm-chart-object-clone/cr.yaml"
+      }
     ]
   ]
 }
