feat: enable linting

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,24 +1,22 @@
-name: Lint
+name: Release
 
 on:
   push:
-    #tags:
-    #  - '**'
     branches:
       - main
       - initial-implementation
 
 jobs:
-#  lint:
-#    name: "Lint"
-#    runs-on: [self-hosted, general-linter]
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#      - name: Lint
-#        shell: bash
-#        run: |
-#          make lint
+  lint:
+    name: "Lint"
+    runs-on: [self-hosted, general-linter]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Lint
+        shell: bash
+        run: |
+          make lint
 
   release:
     permissions:
