--- a/deploy/helm-object-cloner/templates/rbac.yaml
+++ b/deploy/helm-object-cloner/templates/rbac.yaml
@@ -72,3 +72,31 @@ subjects:
   - kind: ServiceAccount
     name: object-cloner
     namespace: {{ .Release.Namespace }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: object-cloner
+rules:
+
+  # Framework: knowing which other operators are running (i.e. peering).
+  - apiGroups: [kopf.dev]
+    resources: [kopfpeerings]
+    verbs: [list, watch, patch, get]
+
+  # Framework: posting the events about the handlers progress/errors.
+  - apiGroups: [""]
+    resources: [events]
+    verbs: [create]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: object-cloner
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: object-cloner
+subjects:
+  - kind: ServiceAccount
+    name: object-cloner
