feat: grant permissions to update clusterobject status

--- a/deploy/helm-object-cloner/templates/rbac.yaml
+++ b/deploy/helm-object-cloner/templates/rbac.yaml
@@ -13,6 +13,7 @@ rules:
       - object-cloner.ideamix.es
     resources:
       - clusterobjects
+      - clusterobjects/status
     verbs:
       - '*'
   - apiGroups:
