--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,4 +1,4 @@
-#repositoryID:
+repositoryID: 9098f5cf-bd5b-4f86-a0d6-8ebb201a42ff
 owners:
   - name: Maxim Nasonov
     email: maxim.nasonov@ideamix.es
